# Abstract

./: README.md  docker-compose.yml  pyproject.toml  python
apps/user/: admin.py  hubspotClient.py  models.py  urls.py  views.py
docker/: entrypoint.sh  template.env
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  ContentTable.js
scripts/: resetProyect.sh  restart-django.sh
web/: urls.py
web/settings/: base.py
